tests/sksl/errors/AssignmentTypeMismatch.glsl
### Compilation failed:

error: 1: expected 'int', but found 'float'
error: 2: type mismatch: '=' cannot operate on 'int', 'float'
error: 3: type mismatch: '*=' cannot operate on 'int3', 'float'
error: 4: expected '(' to begin function call
error: 5: expected '(' to begin constructor invocation
error: 6: expected '(' to begin function call
error: 7: expected '(' to begin constructor invocation
7 errors
